# model-checker

./: Cargo.toml  README.md
src/: algorithm.rs  checking.rs  ctl.rs  kripke.rs  lib.rs  ltl.rs  main.rs  model.rs  parser.rs
src/algorithm/: explicit_state.rs
src/model/: kripke.rs
src/parser/: ctl.pest  ctl_parser.rs  ltl.pest  ltl_parser.rs
